# sagify

./: .coveragerc  .gitignore  .travis.yml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PYPI_DESCRIPTION.md  README.md  index.html  mkdocs.yml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: build.yml  ci.yml  release.yml
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: index.md
llm-gateway/: README.md  requirements.txt  setup.py
llm-gateway/llm_gateway/: __init__.py  main.py  requirements.txt
llm-gateway/llm_gateway/api/v1/: exceptions.py  routes.py
llm-gateway/llm_gateway/api/v1/endpoints/: chat.py  embeddings.py  images.py
llm-gateway/llm_gateway/models/: chat.py  embeddings.py  images.py
llm-gateway/llm_gateway/providers/: client_factory.py
llm-gateway/llm_gateway/providers/openai/: client.py
llm-gateway/llm_gateway/schemas/: __init__.py  chat.py  embeddings.py  images.py
llm-gateway/llm_gateway/services/: chat.py  embeddings.py  images.py
sagify/: Dockerfile  __main__.py  log.py  main.py
sagify/api/: build.py  cloud.py  hyperparameter_tuning.py  initialize.py  llm.py  local.py  push.py
sagify/commands/: __init__.py  build.py  cloud.py  configure.py  create_endpoint.py  initialize.py  llm.py  local.py  push.py  train.py  upload_data.py
sagify/commands/custom_validators/: validators.py
sagify/config/: config.py
sagify/llm_gateway/: main.py
sagify/llm_gateway/api/v1/: routes.py
sagify/llm_gateway/api/v1/endpoints/: chat.py  embeddings.py  images.py
sagify/llm_gateway/providers/: client_factory.py
sagify/llm_gateway/providers/anthropic/: client.py
sagify/llm_gateway/providers/aws/: sagemaker.py
sagify/llm_gateway/providers/openai/: client.py
sagify/llm_gateway/schemas/: chat.py  embeddings.py  images.py
sagify/llm_gateway/services/: chat.py  embeddings.py  images.py
sagify/sagemaker/: sagemaker.py
sagify/sagemaker/sklearn_code/: sklearn_inference.py
sagify/sagemaker/xgboost_code/: xgboost_inference.py
sagify/streaming_inference/: streaming_inference.py
sagify/template/: cookiecutter.json
sagify/template/sagify/: Dockerfile  config.json
sagify/template/sagify/local_test/: deploy_local.sh
sagify/template/sagify/prediction/: predict.py  serve
sagify/template/sagify/training/: train  training.py
sagify/template/sagify_base/: Dockerfile  executor.sh  push.sh
sagify/template/sagify_base/lambda/: lambda_handler.py
sagify/template/sagify_base/local_test/: train_local.sh
sagify/template/sagify_base/prediction/: predict.py  prediction.py  serve
sagify/template/sagify_base/training/: train
sagify/template/{{ cookiecutter.module_slug }}/: Dockerfile  build.sh  build_and_push.sh  config.json  executor.sh  push.sh
sagify/template/{{ cookiecutter.module_slug }}/local_test/: deploy_local.sh  train_local.sh
sagify/template/{{ cookiecutter.module_slug }}/prediction/: predictor.py  serve  wsgi.py
sagify/template/{{ cookiecutter.module_slug }}/training/: train
search/: search_index.json
tests/: test_dummy.py
tests/commands/: test_build.py  test_cloud.py  test_configure.py  test_create_endpoint.py  test_initialize.py  test_llm.py  test_local.py  test_push.py  test_train.py  test_upload_data.py
tests/commands/custom_validators/: test_validators.py
tests/config/: test_config.py
tests/sagemaker/: test_sagemaker.py
