[metadata]
author = Pavlos Mitsoulis Ntompos
author-email = pavlos@kenza.ai
summary = Train and deploy machine learning models on AWS SageMaker in a few simple steps!
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Environment :: Console
keywords = sagify machine-learning machine-learning-deploy machine-learning-production deep-learning-production deep-learning cli aws sagemaker tensorflow mxnet scikit-learn artificial-intelligence keras cntk deploy
license = MIT
description-file = README.md

[bdist_wheel]
universal=1

[flake8]
max-line-length=100
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,venv/,sagify/commands/__init__.py
