[metadata]
author = Pavlos Mitsoulis Ntompos, Ioakeim (Joakim) Lazakis, Dionysis Varelas
author-email = p.mitsoulis@gmail.com, ilazakis@gmail.com, dionvarelas@gmail.com
summary = Machine Learning Training, Tuning and Deployment on AWS
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Environment :: Console
keywords = sagify machine-learning machine-learning-deploy machine-learning-production deep-learning-production deep-learning cli aws sagemaker tensorflow mxnet scikit-learn artificial-intelligence keras cntk deploy
license = MIT
description-file = README.md

[bdist_wheel]
universal=1

[flake8]
max-line-length=150
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,venv/,sagify/commands/__init__.py
